@@ -1,3 +1,7 @@
+* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.8.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed May 26 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.7.1
 - Fixed
   - Mask the service when disabling for rngd compatibility so that it is not
